# mobile-mouse-server

./: Cargo.toml  README.md
src/: controller.rs  main.rs  server.rs  tray.rs
src/icons/: icon.icns
