[package]
name = "mobile-mouse-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enigo = "0.2.1"
ws = "0.9.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clipboard = "0.5.0"
tao = "0.28.1"
tray-icon = "0.14.3"
core-foundation = "0.9.4"
image = "0.25.1"
local-ip-address = "0.6.1"
